[package]
name = "dicom-dictionary-std"
version = "0.6.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "Standard DICOM attribute dictionary"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom", "dictionary"]
readme = "README.md"

[features]
default = []

# run-time deployed DICOM dictionaries
sop-class = []
meta-sop-class = []
transfer-syntax = []
well-known-sop-instance = []
dicom-uid-as-coding-scheme = []
coding-scheme = []
application-context-name = []
service-class = []
application-hosting-model = []
mapping-resource = []
ldap-oid = []
synchronization-frame-of-reference = []
standard = ["dep:serde"]

[dependencies]
dicom-core = { path = "../core", version = "0.6.2" }
once_cell = "1.18.0"
serde = { version = "1.0.193", optional = true, default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.2", default-features = false }

[build-dependencies]
serde_json = "1.0.108"
serde_cbor = "0.11.2"
